[gd_scene format=3 uid="uid://di432bbncxq6p"]

[ext_resource type="Script" uid="uid://c3nhpmcakqt1e" path="res://Character/player.gd" id="1_3c51y"]
[ext_resource type="Texture2D" uid="uid://cndqsmchrnyb0" path="res://Assests/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Idle/Idle-Sheet.png" id="1_6ele1"]
[ext_resource type="Texture2D" uid="uid://gyfopstqg5ty" path="res://Assests/DumDumAssests/Character/SPcharIdle.png" id="3_crn8y"]
[ext_resource type="Texture2D" uid="uid://utcofumnb0n6" path="res://Assests/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Jumlp-All/Jump-All-Sheet.png" id="3_raa3c"]
[ext_resource type="Texture2D" uid="uid://dtkooyfes8jne" path="res://Assests/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Jump-Start/Jump-Start-Sheet.png" id="4_tp31j"]
[ext_resource type="Texture2D" uid="uid://d3lq5oqvc2mwh" path="res://Assests/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Run/Run-Sheet.png" id="5_cyipv"]
[ext_resource type="Texture2D" uid="uid://blvyci28g8u3d" path="res://Assests/DumDumAssests/UI/tankEmpty.png" id="6_76vsb"]
[ext_resource type="Texture2D" uid="uid://fleg7ampst5b" path="res://Assests/DumDumAssests/UI/tankFull.png" id="7_crn8y"]
[ext_resource type="Texture2D" uid="uid://dihrwcw55e4f7" path="res://Assests/DumDumAssests/UI/tankHalf.png" id="8_8qfpo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u3msb"]
atlas = ExtResource("5_cyipv")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xm0m"]
atlas = ExtResource("5_cyipv")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qjmq"]
atlas = ExtResource("3_crn8y")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtchp"]
atlas = ExtResource("3_crn8y")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wj3k"]
atlas = ExtResource("3_crn8y")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5empq"]
atlas = ExtResource("3_crn8y")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p038j"]
atlas = ExtResource("3_crn8y")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_trg66"]
atlas = ExtResource("3_crn8y")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw8fd"]
atlas = ExtResource("3_crn8y")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vv0w"]
atlas = ExtResource("3_crn8y")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eryot"]
atlas = ExtResource("3_crn8y")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7fe0"]
atlas = ExtResource("3_crn8y")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rnnf"]
atlas = ExtResource("3_crn8y")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mqkq"]
atlas = ExtResource("3_crn8y")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcm2m"]
atlas = ExtResource("3_crn8y")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lseus"]
atlas = ExtResource("3_crn8y")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kacel"]
atlas = ExtResource("3_crn8y")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8pcd"]
atlas = ExtResource("3_crn8y")
region = Rect2(720, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q3gy"]
atlas = ExtResource("3_crn8y")
region = Rect2(768, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gal4m"]
atlas = ExtResource("3_crn8y")
region = Rect2(816, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c51y"]
atlas = ExtResource("1_6ele1")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2brrg"]
atlas = ExtResource("1_6ele1")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn4pq"]
atlas = ExtResource("1_6ele1")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_raa3c"]
atlas = ExtResource("1_6ele1")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaers"]
atlas = ExtResource("4_tp31j")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kngs"]
atlas = ExtResource("4_tp31j")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_76vsb"]
atlas = ExtResource("3_raa3c")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crn8y"]
atlas = ExtResource("3_raa3c")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qfpo"]
atlas = ExtResource("3_raa3c")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp31j"]
atlas = ExtResource("3_raa3c")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyipv"]
atlas = ExtResource("3_raa3c")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_76d41"]
atlas = ExtResource("3_raa3c")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m40if"]
atlas = ExtResource("3_raa3c")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q81ek"]
atlas = ExtResource("3_raa3c")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwdr7"]
atlas = ExtResource("3_raa3c")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kk4v"]
atlas = ExtResource("3_raa3c")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur0x2"]
atlas = ExtResource("4_tp31j")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaqyh"]
atlas = ExtResource("4_tp31j")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_13163"]
atlas = ExtResource("4_tp31j")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6p0u"]
atlas = ExtResource("4_tp31j")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj0yq"]
atlas = ExtResource("3_raa3c")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y5aw"]
atlas = ExtResource("3_raa3c")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmb57"]
atlas = ExtResource("3_raa3c")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o003e"]
atlas = ExtResource("3_raa3c")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnfro"]
atlas = ExtResource("3_raa3c")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxppi"]
atlas = ExtResource("3_raa3c")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6avg"]
atlas = ExtResource("3_raa3c")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl30t"]
atlas = ExtResource("3_raa3c")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4vf"]
atlas = ExtResource("3_raa3c")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i4rx"]
atlas = ExtResource("5_cyipv")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls1st"]
atlas = ExtResource("5_cyipv")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxqse"]
atlas = ExtResource("5_cyipv")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy7km"]
atlas = ExtResource("5_cyipv")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t32h"]
atlas = ExtResource("5_cyipv")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct4ma"]
atlas = ExtResource("5_cyipv")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4myw8"]
atlas = ExtResource("5_cyipv")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjk1a"]
atlas = ExtResource("5_cyipv")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_tp31j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3msb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xm0m")
}],
"loop": false,
"name": &"Dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qjmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtchp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wj3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5empq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p038j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trg66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw8fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vv0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eryot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7fe0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rnnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mqkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcm2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lseus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kacel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8pcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q3gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gal4m")
}],
"loop": true,
"name": &"ExploIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c51y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2brrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn4pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raa3c")
}],
"loop": true,
"name": &"Idle",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaers")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kngs")
}],
"loop": false,
"name": &"JumpDouble",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76vsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crn8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qfpo")
}],
"loop": false,
"name": &"JumpEnd",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp31j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyipv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76d41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m40if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q81ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwdr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kk4v")
}],
"loop": true,
"name": &"JumpLoop",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur0x2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaqyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13163")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6p0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj0yq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y5aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmb57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o003e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnfro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxppi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6avg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl30t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4vf")
}],
"loop": false,
"name": &"JumpStart",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i4rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls1st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxqse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy7km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t32h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct4ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4myw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjk1a")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bfpf6"]
radius = 8.0
height = 44.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ur0x2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_76vsb")
}],
"loop": true,
"name": &"tankEmpty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_crn8y")
}],
"loop": true,
"name": &"tankFull",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_8qfpo")
}],
"loop": true,
"name": &"tankHalf",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" unique_id=1945334938]
script = ExtResource("1_3c51y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1259095667]
sprite_frames = SubResource("SpriteFrames_tp31j")
animation = &"Idle"
autoplay = "Idle"
centered = false
offset = Vector2(-32, -32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=838017947]
position = Vector2(-7, -6)
shape = SubResource("CapsuleShape2D_bfpf6")

[node name="dash_timer" type="Timer" parent="." unique_id=451195034]
process_callback = 0
wait_time = 0.05

[node name="fuel_timer1" type="Timer" parent="." unique_id=1755741420]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="fuel_timer2" type="Timer" parent="." unique_id=639004772]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="jump_height_timer" type="Timer" parent="." unique_id=949936883]
wait_time = 0.15
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=2038372543]

[node name="FuelBar" type="AnimatedSprite2D" parent="CanvasLayer" unique_id=799814982]
position = Vector2(53.000004, 125.00001)
scale = Vector2(3.5200002, 3.5200002)
sprite_frames = SubResource("SpriteFrames_ur0x2")
animation = &"tankFull"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="fuel_timer1" to="." method="_on_fuel_timer_timeout"]
[connection signal="timeout" from="fuel_timer1" to="." method="_on_fuel_timer_1_timeout"]
[connection signal="timeout" from="fuel_timer2" to="." method="_on_fuel_timer_timeout"]
[connection signal="timeout" from="fuel_timer2" to="." method="_on_fuel_timer_2_timeout"]
[connection signal="timeout" from="jump_height_timer" to="." method="_on_jump_height_timer_timeout"]
